# cpp-hmm

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: alpha.h  beta.h  learning.h  model.h  passes.h
lib/cmake/: modelConfig.cmake
src/: CMakeLists.txt  alpha.cpp  beta.cpp  learning.cpp  main.cpp  model.cpp  passes.cpp
src/cmake/: alphaConfig.cmake  betaConfig.cmake  learnConfig.cmake  modelConfig.cmake
tests/: CMakeLists.txt  test_alpha_pass.cpp  test_beta_pass.cpp  test_learning.cpp  test_model.cpp
